WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133130
[Mac] AVAssets are never destroyed; lack of an autorelease pool when calling callOnMainThread.
https://bugs.webkit.org/show_bug.cgi?id=133130
Summary
[Mac] AVAssets are never destroyed; lack of an autorelease pool when calling ...
Jer Noble
Reported
2014-05-20 13:06:29 PDT
[Mac] AVAssets are never destroyed; lack of an autorelease pool when calling callOnMainThread.
Attachments
Patch
(1.35 KB, patch)
2014-05-20 13:09 PDT
,
Jer Noble
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-05-20 13:06:48 PDT
<
rdar://problem/16933311
>
Jer Noble
Comment 2
2014-05-20 13:09:50 PDT
Created
attachment 231787
[details]
Patch
Geoffrey Garen
Comment 3
2014-05-20 13:15:53 PDT
Comment on
attachment 231787
[details]
Patch r=me
Eric Carlson
Comment 4
2014-05-20 13:26:17 PDT
<
rdar://problem/16929187
>
Jer Noble
Comment 5
2014-05-20 13:58:02 PDT
Committed
r169131
: <
http://trac.webkit.org/changeset/169131
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug