[Mac] AVAssets are never destroyed; lack of an autorelease pool when calling callOnMainThread. https://bugs.webkit.org/show_bug.cgi?id=133130

Reviewed by Geoff Garen.

Wrap the function to be called in an autorelease pool, so that autoreleased objects are cleaned
up immediately after the end of the function.

* wtf/mac/MainThreadMac.mm:
(WTF::timerFired):

Canonical link: https://commits.webkit.org/151155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169131 268f45cc-cd09-0410-ab3c-d52691b4dbfc